--- a/index.css
+++ b/index.css
@@ -55,6 +55,27 @@ html{
     color: var(--color-accent-1);  
 }
 
+div.firstrow>div{
+    height:500px;
+    width:350px;
+    border-radius: 31px;
+    background: var(--color-accent-1);
+    background: linear-gradient(315deg, rgba(235,227,224,0.5) 0%, rgba(13,12,98,0.5) 100%);
+    border-color:  var(--color-2) ; 
+    border-style: solid;
+}
+
+div.secondrow>div{
+    height:500px;
+    width:350px;
+    border-radius: 31px;
+    background: var(--color-accent-1);
+    background: linear-gradient(315deg, rgba(235,227,224,0.5) 0%, rgba(13,12,98,0.5) 100%);
+    border-color:  var(--color-2) ; 
+    border-style: solid;
+}
+
+
 #uk{
     width: 50px;
     z-index: 2;
@@ -76,7 +97,21 @@ html{
     width: 250px;
 }
 
+#mail{ 
+    width: 50px;
+}
+#phone{ 
+    width: 50px;
+}
   
+
+.separator{
+    width: 100%;
+    height: 10px;
+    background: var(--color-2);
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
 
 #photo{
     display:flex;
