--- a/index.css
+++ b/index.css
@@ -1,15 +1,11 @@
-body {
-    margin: 0;
-    min-height: 100%;
-    font-family: 'Raleway', sans-serif;
-    background: var(--color-1);
-    height:4280px;
-    width:1920px;
-    
-}
-
 html{
     scroll-behavior: smooth;
+}
+
+body {
+    font-family: 'Raleway', sans-serif;
+    background: var(--color-1);
+      
 }
 
 .accueil{
@@ -20,6 +16,33 @@ html{
     
 }
 
+
+nav {
+    position: fixed;
+    background-color: var(--color-2);
+    top: 10px;
+    padding: 1%;
+    width:90%;
+    z-index: -1;
+    display: flex;
+    border-radius: 15px;
+    flex-direction: row;
+    justify-content: space-around;
+    
+}
+
+nav a {
+    color: var(--color-accent-1);
+    margin: 0 20px;
+    
+}
+
+nav:nth-child(1) {
+    justify-self: flex-start;
+}
+
+
+
 .features{
     width: 80%;
     padding-top: 50px;
@@ -27,15 +50,7 @@ html{
     align-items: center;
   }
 
-.navv {
-    position: fixed;
-    background-color: var(--color-2);
-    top: 0px;
-    padding: 1%;
-    width:80%;
-    z-index: -1;
-    display: flex;
-}
+
 
 #colors {
     border-radius: 25px;
@@ -50,7 +65,7 @@ html{
     border-radius: 25px;
     background: var(--color-2);
     padding: 8px; 
-    width: 115px;
+    width: 135px;
     height: auto;
     color: var(--color-accent-1);  
 }
