--- a/index.css
+++ b/index.css
@@ -66,15 +66,31 @@ body {
 
 
 .features{
-    width: 80%;
-    padding-top: 70px;
-    display: flex;
+    margin-top: 70px;
     align-items: center;
-  }
+    border: solid;
+    border-color: red;
+    display:flex;
+    width:90%;
+    margin-left: 5%;
+}
 
 
+.features > div {
+    border: solid;
+    border-color: blue;
+}
 
-#colors {
+
+.darkmode{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+
+.colors p {
     border-radius: 25px;
     background: var(--color-2);
     padding: 8px; 
@@ -139,7 +155,9 @@ div.secondrow>div{
 #phone{ 
     width: 50px;
 }
-  
+
+
+
 
 .separator{
     width: 100%;
@@ -165,36 +183,69 @@ div.secondrow>div{
 
 
 
+/* The switch - the box around the slider */
 .switch {
-    display: flex;
-    /* Rounded border */
-    border-radius: 9999px;
-    /* Size */
-    height: 2rem;
-    width: 4rem;
-    /* Demo */
-    margin-bottom: 0.5rem;
-}
-
-.switch__input {
-    /* Hide the input */
-    display: none;
-}
-
-.switch__circle {
-    /* Rounded border */
-    border-radius: 9999px;
-    /* Size */
-    width: 2rem;
-    background-color: var(--color-1);
-}
-
-
-/* OFF status */
-.switch--off {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    border:solid;
+    border-color: var(--color-2);
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    border:solid;
+    border-color: var(--color-2);
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: -1px;
+    bottom: -1px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
     background-color: var(--color-2);
-    border: 1px solid var(--color-2);
-}
-.switch--off .switch__circle {
-    border: 1px solid var(--color-2);
-}
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px var(--color-2);
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
