--- a/global.css
+++ b/global.css
@@ -6,9 +6,10 @@
     /* Colors */
     --color-1: #EBE3E0;
     --color-2: #0d0c62;
+    --color-1-t: #EBE3E0;
+    --color-2-t: #0d0c62;
     --color-accent-1: #ffffff;
-    --color-accent-2: #000000;
-  
+
     /* font sizes */
     --font-size-s: 24px;
     --font-size-m: 32px;
@@ -26,4 +27,19 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+
+/*Custom Scrollbar*/
+body::-webkit-scrollbar {
+  width: 0.5em;
+}
+
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: var(--color-2);
 }
