--- a/index.css
+++ b/index.css
@@ -8,6 +8,23 @@ body {
       
 }
 
+.s{
+    font-size: var(--font-size-s);
+}
+
+.m{
+    font-size: var(--font-size-m);
+}
+
+.l{
+    font-size: var(--font-size-l);
+}
+
+.xl{
+    font-size: var(--font-size-xl);
+}
+
+
 .accueil{
     display: flex;
     flex-direction: column;
@@ -44,8 +61,6 @@ body {
 
 .navv li a {
     transition:all 0.3s ease 0s;
-    font-size: var(--font-size-m) ;
-
 }
 
 .navv > ul li:hover {
@@ -66,35 +81,173 @@ body {
 
 
 .features{
-    width: 80%;
-    padding-top: 70px;
+    margin-top: 80px;
+    display:flex;
+    align-items: flex-start;
+    width:90%;
+    margin-left: 5%;
+    justify-content: space-between;
+}
+
+
+
+.features div img {
+    width: 30px;
+    height: 30px;
+}
+
+.features .settings {
     display: flex;
+}
+
+
+.darkmode{
+    display: flex;
+    flex-direction: column;
     align-items: center;
-  }
+    text-align: center;
+}
+
+.dark-mode{
+    --color-1: var(--color-2-t);
+    --color-2:var(--color-1-t);
+    --color-accent-1: #000000;
+}
+
+.s-button {
+    margin-bottom: 3px;
+}
 
 
-
-#colors {
+.colors p {
     border-radius: 25px;
     background: var(--color-2);
-    padding: 8px; 
-    width: 48px;
-    height: auto;
+    text-align: center;
+    width: 60px;
+    height: 28px;
     color: var(--color-accent-1);  
+}
+
+
+.text{
+    color:var(--color-2);
+}
+
+.center {
+    margin: auto;
+    margin-top: 200px;
+    width: 90%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 200px;
 }
 
 #bvn {
     border-radius: 25px;
     background: var(--color-2);
     padding: 8px; 
-    width: 135px;
+    width: 242px;
     height: auto;
     color: var(--color-accent-1);  
 }
 
-div.firstrow>div{
+#profil {
+    flex: 1.2;
+}
+
+.carousel {
+    flex: 2;
+}
+
+.cv {
+    flex: 1.2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#profil img {
+    height: 30px;
+    width: 30px;
+}
+
+#photo{
+    display:flex;
+    width: 500px;
+    height: 500px;
+    background-color: var(--color-2);
+    border-radius: 50%;
+    margin: 0 auto;
+    margin-top: -150px;
+}
+
+.separator{
+    width: 100%;
+    height: 10px;
+    background: var(--color-2);
+    margin-bottom: 50px;
+}
+
+.title{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 25px;
+}
+
+.QSJContent{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 50px;
+}
+
+#creation { grid-area: 1 / 1 / 2 / 2; }
+#firstP { grid-area: 1 / 2 / 2 / 6; }
+#secondP { grid-area: 2 / 1 / 3 / 5; }
+#formation { grid-area: 2 / 5 / 3 / 6; }
+
+.para{
+    text-align: justify;
+    text-justify: auto;
+    margin: 0 20px;
+}
+
+.firstRow {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 50px;
+    grid-row-gap: 0px;
+
+}
+
+.card1 { grid-area: 1 / 1 / 2 / 2; }
+.card2 { grid-area: 1 / 2 / 2 / 3; }
+.card3 { grid-area: 1 / 3 / 2 / 4; }
+
+.secondRow {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 50px;
+    grid-row-gap: 0px;
+
+}
+
+.card4 { grid-area: 1 / 1 / 2 / 2; }
+.card5 { grid-area: 1 / 2 / 2 / 3; }
+.card6 { grid-area: 1 / 3 / 2 / 4; }
+
+
+
+
+div.firstRow>div{
     height:500px;
-    width:350px;
+    width:400px;
     border-radius: 31px;
     background: var(--color-accent-1);
     background: linear-gradient(315deg, rgba(235,227,224,0.5) 0%, rgba(13,12,98,0.5) 100%);
@@ -102,9 +255,9 @@ div.firstrow>div{
     border-style: solid;
 }
 
-div.secondrow>div{
+div.secondRow>div{
     height:500px;
-    width:350px;
+    width:400px;
     border-radius: 31px;
     background: var(--color-accent-1);
     background: linear-gradient(315deg, rgba(235,227,224,0.5) 0%, rgba(13,12,98,0.5) 100%);
@@ -129,8 +282,13 @@ div.secondrow>div{
     width: 50px;
 }
 
-#creation{ 
-    width: 250px;
+#formation{ 
+    width: 95%;
+}
+
+#creation{
+    margin-left: 20px;
+    width: 70%;
 }
 
 #mail{ 
@@ -139,62 +297,64 @@ div.secondrow>div{
 #phone{ 
     width: 50px;
 }
-  
-
-.separator{
-    width: 100%;
-    height: 10px;
-    background: var(--color-2);
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-#photo{
-    display:flex;
-    width: 500px;
-    height: 500px;
-    background-color: var(--color-2);
-    border-radius: 50%;
-    margin: 0 auto;
-    margin-top: -150px;
-}
 
 
 
-
-
-
-
+/* The switch - the box around the slider */
 .switch {
-    display: flex;
-    /* Rounded border */
-    border-radius: 9999px;
-    /* Size */
-    height: 2rem;
-    width: 4rem;
-    /* Demo */
-    margin-bottom: 0.5rem;
-}
-
-.switch__input {
-    /* Hide the input */
-    display: none;
-}
-
-.switch__circle {
-    /* Rounded border */
-    border-radius: 9999px;
-    /* Size */
-    width: 2rem;
-    background-color: var(--color-1);
-}
-
-
-/* OFF status */
-.switch--off {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 28px;
+  }
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    border:solid;
+    border-color: var(--color-2);
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+   
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 15px;
+    width: 15px;
+    left: 1.5px;
+    bottom: 3px;
     background-color: var(--color-2);
-    border: 1px solid var(--color-2);
-}
-.switch--off .switch__circle {
-    border: 1px solid var(--color-2);
-}
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+ 
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(32px);
+    -ms-transform: translateX(32px);
+    transform: translateX(32px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
