--- a/index.css
+++ b/index.css
@@ -120,6 +120,9 @@ body {
     margin-bottom: 3px;
 }
 
+.colors{
+    margin-right:10px;
+}
 
 .colors p {
     border-radius: 25px;
@@ -240,11 +243,17 @@ body {
     grid-area: 1 / 2 / 2 / 3;
     margin-left:auto;
     margin-right:auto;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
  }
 .card3 { 
     grid-area: 1 / 3 / 2 / 4; 
     margin-left:auto;
     margin-right:auto;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .secondRow {
@@ -298,6 +307,45 @@ div.secondRow>div{
     border-style: solid;
 }
 
+
+.cardTitle{
+    padding-top:15px;
+    margin-bottom: 20px;
+    font-size: var(--font-size-m);
+    color: var(--color-2);
+}
+
+.cardDesc{
+    text-align: justify;
+    text-justify: auto;
+    margin: 0 20px;
+    font-size: var(--font-size-xs);
+    color: var(--color-2);
+}
+
+.tag{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+    
+}
+
+.tag p{
+    border-radius: 25px;
+    border-style: solid;
+    border-color:  var(--color-1) ;
+    padding-top:2px;
+    padding-bottom:2px;
+    padding-left:6px;
+    padding-right:6px;
+    margin: 5px;
+    color: var(--color-2);
+}
+
+.link a{
+    margin-right:15px;
+}
 
 .contactInfo {
     
